# zero-mysql

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  clippy.toml  deny.toml  release-plz.toml  shell.nix
.github/: renovate.json
.github/workflows/: book.yml  cargo-deny.yml  ci.yml  release.yml  security.yml
benches/: mysql_benches.rs  zero_mysql_benches.rs
book/: book.toml
book/src/: SUMMARY.md  api.md  conn.md  datatype.md  intro.md  log.md  query.md  tx.md  zerocopy.md
examples/: basic.rs  bench_zero_compio.rs  buffer_set_usage.rs  connection_info.rs  store_column_definition.rs  tracy_base_async.rs  tracy_base_sync.rs  tracy_base_sync_select.rs  tracy_wtx.rs  tracy_zero_sync_select.rs  tracy_zero_tokio.rs
src/: buffer.rs  buffer_pool.rs  buffer_test.rs  col.rs  constant.rs  constant_test.rs  error.rs  handler.rs  lib.rs  nightly.rs  opts.rs  opts_test.rs  prepared.rs  raw.rs  ref_row.rs  row.rs  test_macros.rs  value.rs  value_test.rs
src/async/: conn.rs  mod.rs
src/compio/: conn.rs  mod.rs  pool.rs  stream.rs  transaction.rs
src/diesel/: connection.rs  cursor.rs  mod.rs  row.rs
src/protocol/: mod.rs  packet.rs  primitive.rs  response.rs  row.rs  value.rs
src/protocol/command/: bulk_exec.rs  column_definition.rs  column_definition_test.rs  mod.rs  prepared.rs  query.rs  resultset.rs  text.rs  utility.rs
src/protocol/connection/: column_definition.rs  handshake.rs  mod.rs  ssl_request.rs
src/protocol/trait/: mod.rs  param.rs  param_test.rs  params.rs
src/sync/: conn.rs  mod.rs  pool.rs  stream.rs  transaction.rs
src/tokio/: conn.rs  mod.rs  pool.rs  stream.rs  transaction.rs
tests/: async_.rs  compio_transaction.rs  derive.rs  diesel_crud.rs  ref_from_row.rs  sync.rs  sync_pool.rs  sync_transaction.rs  temporal_type.rs  tokio_pool.rs  tokio_transaction.rs
tests/async_/: pool.rs
tests/common/: check.rs  check_eq.rs  check_err.rs
zero-mysql-derive/: Cargo.toml
zero-mysql-derive/src/: lib.rs
