[package]
name = "zero-mysql"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "zero_mysql_benches"
harness = false

[[bench]]
name = "mysql_benches"
harness = false
required-features = ["dev"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "net"], optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
url = "2.5"
bitflags = "2.6"
log = "0.4.28"
auto_impl = "1.3.0"
tracing = { version = "*", features = ["release_max_level_warn"] }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "*"
# tracing = { version = "*" }
tracy-client = { version = "=0.18.0" }
tracing-subscriber = { version = "*" }
# mysql = { path = "../rust-mysql-simple", optional = true }
mysql = { version = "*" }
mysql_async = { version = "*" }
tracing-tracy = { version = "*" }
reqray = { version = "*" }

[features]
default = ["sync", "tokio"]
sync = []
tokio = ["dep:tokio"]
tls = ["dep:native-tls", "dep:tokio-native-tls"]

[profile.bench]
debug = true

[profile.release]
debug = true
