[package]
name = "zero-mysql"
version = "0.1.0"
edition = "2024"
description = "A high-performance, zero-copy MySQL client library"
repository = "https://github.com/elbaro/zero-mysql"
keywords = ["mysql", "mariadb", "database", "sql", "async"]
categories = ["database"]

[features]
default = ["sync", "tokio"]
sync = []
tokio = ["dep:tokio"]
tls = ["dep:native-tls", "dep:tokio-native-tls"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "net"], optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
url = "2.5"
bitflags = "2.6"
log = "0.4.28"
auto_impl = "1.3.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
crossbeam-queue = "0.3.12"

[lints.clippy]
all = "deny"
restriction = "warn"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
# tracing = { version = "*" }
tracy-client = { version = "=0.18.0" }
tracing-subscriber = "0.3"
# mysql = { path = "../rust-mysql-simple", optional = true }
mysql = "26"
mysql_async = "0.36"
tracing-tracy = "0.11"
reqray = "0.4"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "zero_mysql_benches"
harness = false

[[bench]]
name = "mysql_benches"
harness = false
required-features = ["dev"]
