[package]
name = "zero-mysql-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Derive macros for zero-mysql"
repository = "https://github.com/elbaro/zero-mysql"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
